# HoudiniSolverGenerator

./: README.md  mk.py
Template/: CMakeLists.txt
Template/hip/: example.hip
Template/houdini/: AttribHelper.h  DLLEntrance.cpp  SIM__EXAMPLE_SOLVER_.cpp  SIM__EXAMPLE_SOLVER_.h
